tooltip fix flickering

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   font-size: 13px;
 }
 .dynamoLogo{
-  width: 85%;
+  width: 153px;
 }
 
 .bottomMenu{
